--- a/app/styles/layout.css
+++ b/app/styles/layout.css
@@ -95,12 +95,11 @@ body div.container-studio {
 .console_class_functions div.row .functiotron:first-child {
   border-top: 3px solid #c5c5c5;
 }
+
 .console_class_functions > div.row div.col-md-12 {
   border-left: 3px solid #c5c5c5;
   border-right: 3px solid #c5c5c5;
   border-bottom: 3px solid #c5c5c5;
-
-
 
 }
 
@@ -412,6 +411,7 @@ text.vicon {
 .btn {
   border-radius: 0;
 }
+
 .btn-default {
   background-color: #c0c0c0;
   background-image: none;
@@ -1146,6 +1146,38 @@ div.users-ui div.container-fluid, div.role-ui div.container-fluid {
 .security-card {
   padding: 15px;
 }
+
 .config-card {
   padding: 15px;
+}
+
+.basic-log {
+
+}
+
+.log-finished {
+  background-color: #5cb85c;
+  border-color: #5cb85c;
+}
+
+.log-error {
+  background-color: #d9534f;
+  border-color: #d9534f;
+}
+
+.log-started, .log-scheduled {
+  background-color: #5bc0de;
+  border-color: #5bc0de;
+}
+
+.log-finished-icon {
+  color: #5cb85c;
+}
+
+.log-error-icon {
+  color: #d9534f;
+}
+
+.log-started-icon, .log-scheduled-icon {
+  color: #5bc0de;
 }
