--- a/app/views/server/stats/backup.html
+++ b/app/views/server/stats/backup.html
@@ -6,12 +6,34 @@
   </div>
   <div ng-show="agentActive">
     <div class="row">
-      <div class="col-md-12">
-        <tabset clazz="clazz">
-          <tab title="{{key}}" icon="icon" context="key" ng-repeat="(key,value) in databases"
-               template-url="views/server/backup/singleBackup.html"></tab>
-        </tabset>
+      <div class="col-md-3 col-md-offset-0">
+        <form class="form-horizontal">
+          <div class="form-group">
+            <label class="control-label col-md-3">Databases</label>
+            <div class="col-md-9">
+              <select ng-model="database" class="form-control" ng-options="key for (key,value) in databases">
+              </select>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ng-include src="'views/server/backup/singleBackup.html'">
+        </ng-include>
+      </div>
+    </div>
+
+    <!--<div class="row">-->
+    <!--<div class="col-md-12">-->
+    <!--<tabset clazz="clazz">-->
+    <!--<tab title="{{key}}" icon="icon" context="key" ng-repeat="(key,value) in databases"-->
+    <!--template-url="views/server/backup/singleBackup.html"></tab>-->
+    <!--</tabset>-->
+
+
+    <!--</div>-->
+    <!--</div>-->
   </div>
 </div>
