--- a/app/views/server/stats/security.html
+++ b/app/views/server/stats/security.html
@@ -7,7 +7,7 @@
   <div ng-show="agentActive">
     <div class="row">
       <div class="col-md-12">
-        <tabset clazz="clazz">
+        <tabset >
           <tab title="{{t.name}}" icon="icon" ng-repeat="t in securityTabs"
                template-url="{{t.template}}"></tab>
         </tabset>
