--- a/app/views/server/backup/restore.html
+++ b/app/views/server/backup/restore.html
@@ -31,8 +31,9 @@
 
             <div class="studio-well">
               <p>
-                The selected backup event (<b>{{restored.log.mode}}</b>) is part of an incremental backup.
-                Below are the files (<b>{{unitLogs.length}}</b>) involved . The restore will use all al this file to
+                The selected backup is part of an incremental backup.
+                Below are the files (<b>{{unitLogs.length}}</b>) involved . The restore will use all the files stored
+                in <b>{{restored.log.path}}</b> to
                 restore the database.
               </p>
             </div>
