--- a/app/views/server/backup/singleBackup.html
+++ b/app/views/server/backup/singleBackup.html
@@ -2,21 +2,7 @@
   <div class="col-md-12" ng-controller="SingleBackupController">
     <div>
       <div class="row">
-        <div class="col-md-7">
-
-        </div>
         <div class="col-md-5">
-          <ul class="list-inline">
-            <li ng-click="onEventClick(t)" ng-repeat="t in eventsType" class="pointer">
-              <i class="fa" ng-class="getClazz(t)">
-              </i>
-              {{t.name}}
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
           <div class="panel panel-default">
             <div class="panel-heading">Settings</div>
             <div class="panel-body">
@@ -34,9 +20,21 @@
                   </div>
                 </div>
                 <div class="form-group">
+                  <label class="col-sm-3 control-label">Enabled</label>
+                  <div class="col-sm-9">
+                    <input type="checkbox" ng-model="backup.enabled">
+                  </div>
+                </div>
+                <div class="form-group">
                   <label class="col-sm-3 control-label">Directory</label>
                   <div class="col-sm-9">
                     <input type="text" class="form-control" placeholder="Directory" ng-model="backup.directory">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-sm-3 control-label">Retention days</label>
+                  <div class="col-sm-9">
+                    <input type="number" class="form-control" placeholder="" ng-model="backup.retentionDays">
                   </div>
                 </div>
                 <div class="form-group">
@@ -69,7 +67,17 @@
             </div>
           </div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-7">
+
+          <div ng-show="backup.uuid">
+            <ul class="list-inline text-center">
+              <li ng-click="onEventClick(t)" ng-repeat="t in eventsType" class="pointer">
+                <i class="fa" ng-class="getClazz(t)">
+                </i>
+                {{t.name}}
+              </li>
+            </ul>
+          </div>
           <div id="calendar"></div>
 
         </div>
